--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Web</span>
-                                    <h3 class="projects__title">Day.uz Site</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <h3 class="projects__title">Blog sayt</h3>
+                                    <a href="https://blog-front-end-alpha.vercel.app" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
