--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Web</span>
+                                    <span class="projects__subtitle">Web mini Game</span>
                                     <h3 class="projects__title">GameNinja</h3>
                                     <a href="https://nodirmn.github.io/MiniGameMenja/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
